drm: using mul_u32_u32() requires linux/math64.h (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3507,6 +3507,7 @@
 	patches.kernel.org/6.6.16-256-i2c-rk3x-Adjust-mask-value-offset-for-i2c2-on-.patch
 	patches.kernel.org/6.6.16-257-perf-Fix-the-nr_addr_filters-fix.patch
 	patches.kernel.org/6.6.16-258-wifi-cfg80211-fix-RCU-dereference-in-__cfg8021.patch
+	patches.kernel.org/6.6.16-259-drm-using-mul_u32_u32-requires-linux-math64.h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
