minmax: allow comparisons of 'int' against 'unsigned char/short' (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3346,6 +3346,7 @@
 	patches.kernel.org/6.6.16-095-minmax-add-umin-a-b-and-umax-a-b.patch
 	patches.kernel.org/6.6.16-096-minmax-allow-min-max-clamp-if-the-arguments-ha.patch
 	patches.kernel.org/6.6.16-097-minmax-fix-indentation-of-__cmp_once-and-__cla.patch
+	patches.kernel.org/6.6.16-098-minmax-allow-comparisons-of-int-against-unsign.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
