ALSA: hda: Intel: add HDA_ARL PCI ID support (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3422,6 +3422,7 @@
 	patches.kernel.org/6.6.16-171-media-stk1160-Fixed-high-volume-of-stk1160_dbg.patch
 	patches.kernel.org/6.6.16-172-media-rockchip-rga-fix-swizzling-for-RGB-forma.patch
 	patches.kernel.org/6.6.16-173-PCI-add-INTEL_HDA_ARL-to-pci_ids.h.patch
+	patches.kernel.org/6.6.16-174-ALSA-hda-Intel-add-HDA_ARL-PCI-ID-support.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
