--- a/series.conf
+++ b/series.conf
@@ -3446,6 +3446,7 @@
 	patches.kernel.org/6.6.16-195-drm-msm-dpu-enable-writeback-on-SM8350.patch
 	patches.kernel.org/6.6.16-196-drm-msm-dpu-enable-writeback-on-SM8450.patch
 	patches.kernel.org/6.6.16-197-drm-msm-dpu-Ratelimit-framedone-timeout-msgs.patch
+	patches.kernel.org/6.6.16-198-drm-msm-dpu-fix-writeback-programming-for-YUV-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
