bpf: Check rcu_read_lock_trace_held() before calling bpf map helpers (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3336,6 +3336,7 @@
 	patches.kernel.org/6.6.16-085-wifi-ath9k-Fix-potential-array-index-out-of-bo.patch
 	patches.kernel.org/6.6.16-086-wifi-ath11k-fix-race-due-to-setting-ATH11K_FLA.patch
 	patches.kernel.org/6.6.16-087-wifi-rtw89-fix-misbehavior-of-TX-beacon-in-con.patch
+	patches.kernel.org/6.6.16-088-bpf-Check-rcu_read_lock_trace_held-before-call.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
