--- a/series.conf
+++ b/series.conf
@@ -3383,6 +3383,7 @@
 	patches.kernel.org/6.6.16-132-block-prevent-an-integer-overflow-in-bvec_try_.patch
 	patches.kernel.org/6.6.16-133-md-Whenassemble-the-array-consult-the-superblo.patch
 	patches.kernel.org/6.6.16-134-arm64-dts-qcom-msm8996-Fix-in-ports-is-a-requi.patch
+	patches.kernel.org/6.6.16-135-arm64-dts-qcom-msm8998-Fix-out-ports-is-a-requ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
