x86/boot: Ignore NMIs during very early boot (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3257,6 +3257,7 @@
 	patches.kernel.org/6.6.16-006-powerpc-Fix-build-error-due-to-is_valid_bugadd.patch
 	patches.kernel.org/6.6.16-007-powerpc-mm-Fix-build-failures-due-to-arch_rese.patch
 	patches.kernel.org/6.6.16-008-powerpc-64s-Fix-CONFIG_NUMA-n-build-due-to-cre.patch
+	patches.kernel.org/6.6.16-009-x86-boot-Ignore-NMIs-during-very-early-boot.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
