rxrpc_find_service_conn_rcu: fix the usage of read_seqbegin_or_lock() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3289,6 +3289,7 @@
 	patches.kernel.org/6.6.16-038-crypto-stm32-crc32-fix-parsing-list-of-devices.patch
 	patches.kernel.org/6.6.16-039-afs-fix-the-usage-of-read_seqbegin_or_lock-in-.patch
 	patches.kernel.org/6.6.16-040-afs-fix-the-usage-of-read_seqbegin_or_lock-in-.patch
+	patches.kernel.org/6.6.16-041-rxrpc_find_service_conn_rcu-fix-the-usage-of-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
