--- a/series.conf
+++ b/series.conf
@@ -3460,6 +3460,7 @@
 	patches.kernel.org/6.6.16-209-drm-amd-display-Fix-minor-issues-in-BW-Allocat.patch
 	patches.kernel.org/6.6.16-210-drm-amdgpu-Let-KFD-sync-with-VM-fences.patch
 	patches.kernel.org/6.6.16-211-Re-revert-drm-amd-display-Enable-Replay-for-st.patch
+	patches.kernel.org/6.6.16-212-drm-amdgpu-Fix-fw-from-request_firmware-not-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
