drm/msm/dsi: Enable runtime PM (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3564,6 +3564,7 @@
 	patches.kernel.org/6.6.16-313-arm64-irq-set-the-correct-node-for-shadow-call.patch
 	patches.kernel.org/6.6.16-314-mm-kmsan-fix-infinite-recursion-due-to-RCU-cri.patch
 	patches.kernel.org/6.6.16-315-Revert-drm-amd-display-Disable-PSR-SU-on-Parad.patch
+	patches.kernel.org/6.6.16-316-drm-msm-dsi-Enable-runtime-PM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
