net: atlantic: eliminate double free in error handling logic (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3378,6 +3378,7 @@
 	patches.kernel.org/6.6.16-127-scsi-lpfc-Move-determination-of-vmid_flag-afte.patch
 	patches.kernel.org/6.6.16-128-scsi-hisi_sas-Set-.phy_attached-before-notifin.patch
 	patches.kernel.org/6.6.16-129-ice-fix-ICE_AQ_VSI_Q_OPT_RSS_-register-values.patch
+	patches.kernel.org/6.6.16-130-net-atlantic-eliminate-double-free-in-error-ha.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
