drm/amdkfd: Fix iterator used outside loop in 'kfd_add_peer_prop()' (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3462,6 +3462,7 @@
 	patches.kernel.org/6.6.16-211-Re-revert-drm-amd-display-Enable-Replay-for-st.patch
 	patches.kernel.org/6.6.16-212-drm-amdgpu-Fix-fw-from-request_firmware-not-re.patch
 	patches.kernel.org/6.6.16-213-drm-amdgpu-Drop-fence-check-in-to_amdgpu_amdkf.patch
+	patches.kernel.org/6.6.16-214-drm-amdkfd-Fix-iterator-used-outside-loop-in-k.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
