crypto: p10-aes-gcm - Avoid -Wstringop-overflow warnings (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3280,6 +3280,7 @@
 	patches.kernel.org/6.6.16-029-jfs-fix-array-index-out-of-bounds-in-dbAdjTree.patch
 	patches.kernel.org/6.6.16-030-jfs-fix-uaf-in-jfs_evict_inode.patch
 	patches.kernel.org/6.6.16-031-hwrng-starfive-Fix-dev_err_probe-return-error.patch
+	patches.kernel.org/6.6.16-032-crypto-p10-aes-gcm-Avoid-Wstringop-overflow-wa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
