mm, kmsan: fix infinite recursion due to RCU critical section (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3562,6 +3562,7 @@
 	patches.kernel.org/6.6.16-311-selftests-net-add-missing-config-for-NF_TARGET.patch
 	patches.kernel.org/6.6.16-312-selftests-net-enable-some-more-knobs.patch
 	patches.kernel.org/6.6.16-313-arm64-irq-set-the-correct-node-for-shadow-call.patch
+	patches.kernel.org/6.6.16-314-mm-kmsan-fix-infinite-recursion-due-to-RCU-cri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
