media: amphion: remove mutext lock in condition of wait_event (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3437,6 +3437,7 @@
 	patches.kernel.org/6.6.16-186-f2fs-fix-to-tag-gcing-flag-on-page-during-bloc.patch
 	patches.kernel.org/6.6.16-187-drm-exynos-Call-drm_atomic_helper_shutdown-at-.patch
 	patches.kernel.org/6.6.16-188-IB-ipoib-Fix-mcast-list-locking.patch
+	patches.kernel.org/6.6.16-189-media-amphion-remove-mutext-lock-in-condition-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
