--- a/series.conf
+++ b/series.conf
@@ -3483,6 +3483,7 @@
 	patches.kernel.org/6.6.16-232-usb-hub-Replace-hardcoded-quirk-value-with-BIT.patch
 	patches.kernel.org/6.6.16-233-usb-hub-Add-quirk-to-decrease-IN-ep-poll-inter.patch
 	patches.kernel.org/6.6.16-234-selftests-sgx-Fix-linker-script-asserts.patch
+	patches.kernel.org/6.6.16-235-tty-allow-TIOCSLCKTRMIOS-with-CAP_CHECKPOINT_R.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
