ACPI: video: Add quirk for the Colorful X15 AT 23 Laptop (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3265,6 +3265,7 @@
 	patches.kernel.org/6.6.16-014-debugobjects-Stop-accessing-objects-after-rele.patch
 	patches.kernel.org/6.6.16-015-regulator-core-Only-increment-use_count-when-e.patch
 	patches.kernel.org/6.6.16-016-audit-Send-netlink-ACK-before-setting-connecti.patch
+	patches.kernel.org/6.6.16-017-ACPI-video-Add-quirk-for-the-Colorful-X15-AT-2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
