--- a/series.conf
+++ b/series.conf
@@ -3293,6 +3293,7 @@
 	patches.kernel.org/6.6.16-042-jfs-fix-array-index-out-of-bounds-in-diNewExt.patch
 	patches.kernel.org/6.6.16-043-s390-boot-always-align-vmalloc-area-on-segment.patch
 	patches.kernel.org/6.6.16-044-arch-consolidate-arch_irq_work_raise-prototype.patch
+	patches.kernel.org/6.6.16-045-s390-vfio-ap-fix-sysfs-status-attribute-for-AP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
