selftests: net: remove dependency on ebpf tests (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3515,6 +3515,7 @@
 	patches.kernel.org/6.6.16-264-regulator-ti-abb-don-t-use-devm_platform_iorem.patch
 	patches.kernel.org/6.6.16-265-scsi-core-Move-scsi_host_busy-out-of-host-lock.patch
 	patches.kernel.org/6.6.16-266-HID-hidraw-fix-a-problem-of-memory-leak-in-hid.patch
+	patches.kernel.org/6.6.16-267-selftests-net-remove-dependency-on-ebpf-tests.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
