--- a/series.conf
+++ b/series.conf
@@ -3427,6 +3427,7 @@
 	patches.kernel.org/6.6.16-176-drm-msm-dp-Add-DisplayPort-controller-for-SM86.patch
 	patches.kernel.org/6.6.16-177-media-uvcvideo-Fix-power-line-control-for-a-Ch.patch
 	patches.kernel.org/6.6.16-178-media-uvcvideo-Fix-power-line-control-for-Sunp.patch
+	patches.kernel.org/6.6.16-179-media-rkisp1-Drop-IRQF_SHARED.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
