--- a/series.conf
+++ b/series.conf
@@ -3355,6 +3355,7 @@
 	patches.kernel.org/6.6.16-104-wifi-mt76-connac-fix-EHT-phy-mode-check.patch
 	patches.kernel.org/6.6.16-105-wifi-mt76-mt7996-add-PCI-IDs-for-mt7992.patch
 	patches.kernel.org/6.6.16-106-bpf-Set-uattr-batch.count-as-zero-before-batch.patch
+	patches.kernel.org/6.6.16-107-wifi-wfx-fix-possible-NULL-pointer-dereference.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
