--- a/series.conf
+++ b/series.conf
@@ -3307,6 +3307,7 @@
 	patches.kernel.org/6.6.16-056-ext4-remove-unnecessary-check-from-alloc_flex_.patch
 	patches.kernel.org/6.6.16-057-ext4-avoid-online-resizing-failures-due-to-ove.patch
 	patches.kernel.org/6.6.16-058-wifi-rtw89-fix-timeout-calculation-in-rtw89_ro.patch
+	patches.kernel.org/6.6.16-059-wifi-rt2x00-restart-beacon-queue-when-hardware.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
