scsi: libfc: Fix up timeout error in fc_fcp_rec_error() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3340,6 +3340,7 @@
 	patches.kernel.org/6.6.16-089-bpf-Set-need_defer-as-false-when-clearing-fd-a.patch
 	patches.kernel.org/6.6.16-090-wifi-ath12k-fix-and-enable-AP-mode-for-WCN7850.patch
 	patches.kernel.org/6.6.16-091-scsi-libfc-Don-t-schedule-abort-twice.patch
+	patches.kernel.org/6.6.16-092-scsi-libfc-Fix-up-timeout-error-in-fc_fcp_rec_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
