--- a/series.conf
+++ b/series.conf
@@ -3451,6 +3451,7 @@
 	patches.kernel.org/6.6.16-200-clk-hi3620-Fix-memory-leak-in-hi3620_mmc_clk_i.patch
 	patches.kernel.org/6.6.16-201-clk-mmp-pxa168-Fix-memory-leak-in-pxa168_clk_i.patch
 	patches.kernel.org/6.6.16-202-watchdog-starfive-add-lock-annotations-to-fix-.patch
+	patches.kernel.org/6.6.16-203-watchdog-it87_wdt-Keep-WDTCTRL-bit-3-unmodifie.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
