selftests: net: add missing config for nftables-backed iptables (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3551,6 +3551,7 @@
 	patches.kernel.org/6.6.16-300-pds_core-Prevent-race-issues-involving-the-adm.patch
 	patches.kernel.org/6.6.16-301-pds_core-Clear-BARs-on-reset.patch
 	patches.kernel.org/6.6.16-302-pds_core-Rework-teardown-setup-flow-to-be-more.patch
+	patches.kernel.org/6.6.16-303-selftests-net-add-missing-config-for-nftables-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
