--- a/series.conf
+++ b/series.conf
@@ -3538,6 +3538,7 @@
 	patches.kernel.org/6.6.16-287-selftests-net-Add-missing-matchall-classifier.patch
 	patches.kernel.org/6.6.16-288-bridge-mcast-fix-disabled-snooping-after-long-.patch
 	patches.kernel.org/6.6.16-289-devlink-Fix-referring-to-hw_addr-attribute-dur.patch
+	patches.kernel.org/6.6.16-290-selftests-net-add-missing-config-for-GENEVE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
