--- a/series.conf
+++ b/series.conf
@@ -3500,6 +3500,7 @@
 	patches.kernel.org/6.6.16-249-ceph-fix-deadlock-or-deadcode-of-misusing-dget.patch
 	patches.kernel.org/6.6.16-250-ceph-fix-invalid-pointer-access-if-get_quota_r.patch
 	patches.kernel.org/6.6.16-251-drm-amdgpu-fix-avg-vs-input-power-reporting-on.patch
+	patches.kernel.org/6.6.16-252-drm-amd-powerplay-Fix-kzalloc-parameter-ATOM_T.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
