--- a/series.conf
+++ b/series.conf
@@ -3281,6 +3281,7 @@
 	patches.kernel.org/6.6.16-030-jfs-fix-uaf-in-jfs_evict_inode.patch
 	patches.kernel.org/6.6.16-031-hwrng-starfive-Fix-dev_err_probe-return-error.patch
 	patches.kernel.org/6.6.16-032-crypto-p10-aes-gcm-Avoid-Wstringop-overflow-wa.patch
+	patches.kernel.org/6.6.16-033-pstore-ram-Fix-crash-when-setting-number-of-cp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
