ext4: fix inconsistent between segment fstrim and full fstrim (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3302,6 +3302,7 @@
 	patches.kernel.org/6.6.16-051-smb-client-fix-renaming-of-reparse-points.patch
 	patches.kernel.org/6.6.16-052-smb-client-fix-hardlinking-of-reparse-points.patch
 	patches.kernel.org/6.6.16-053-ecryptfs-Reject-casefold-directory-inodes.patch
+	patches.kernel.org/6.6.16-054-ext4-fix-inconsistent-between-segment-fstrim-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
