--- a/series.conf
+++ b/series.conf
@@ -3432,6 +3432,7 @@
 	patches.kernel.org/6.6.16-181-media-rkisp1-Store-IRQ-lines.patch
 	patches.kernel.org/6.6.16-182-media-rkisp1-Fix-IRQ-disable-race-issue.patch
 	patches.kernel.org/6.6.16-183-media-rkisp1-resizer-Stop-manual-allocation-of.patch
+	patches.kernel.org/6.6.16-184-hwmon-nct6775-Fix-fan-speed-set-failure-in-aut.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
