netfilter: nf_tables: restrict tunnel object to NFPROTO_NETDEV (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3540,6 +3540,7 @@
 	patches.kernel.org/6.6.16-289-devlink-Fix-referring-to-hw_addr-attribute-dur.patch
 	patches.kernel.org/6.6.16-290-selftests-net-add-missing-config-for-GENEVE.patch
 	patches.kernel.org/6.6.16-291-netfilter-conntrack-correct-window-scaling-wit.patch
+	patches.kernel.org/6.6.16-292-netfilter-nf_tables-restrict-tunnel-object-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
