--- a/series.conf
+++ b/series.conf
@@ -3391,6 +3391,7 @@
 	patches.kernel.org/6.6.16-140-wifi-rtw89-coex-Fix-wrong-Wi-Fi-role-info-and-.patch
 	patches.kernel.org/6.6.16-141-libbpf-Fix-NULL-pointer-dereference-in-bpf_obj.patch
 	patches.kernel.org/6.6.16-142-wifi-rtlwifi-rtl8723-be-ae-using-calculate_bit.patch
+	patches.kernel.org/6.6.16-143-wifi-cfg80211-free-beacon_ies-when-overridden-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
