--- a/series.conf
+++ b/series.conf
@@ -3520,6 +3520,7 @@
 	patches.kernel.org/6.6.16-269-gve-Fix-skb-truesize-underestimation.patch
 	patches.kernel.org/6.6.16-270-net-ethernet-mtk_eth_soc-set-DMA-coherent-mask.patch
 	patches.kernel.org/6.6.16-271-net-phy-mediatek-ge-soc-sync-driver-with-Media.patch
+	patches.kernel.org/6.6.16-272-selftests-net-add-missing-config-for-big-tcp-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
