crypto: stm32/crc32 - fix parsing list of devices (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3286,6 +3286,7 @@
 	patches.kernel.org/6.6.16-035-crypto-starfive-Fix-dev_err_probe-return-error.patch
 	patches.kernel.org/6.6.16-036-crypto-octeontx2-Fix-cptvf-driver-cleanup.patch
 	patches.kernel.org/6.6.16-037-erofs-fix-ztailpacking-for-subpage-compressed-.patch
+	patches.kernel.org/6.6.16-038-crypto-stm32-crc32-fix-parsing-list-of-devices.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
