--- a/series.conf
+++ b/series.conf
@@ -3539,6 +3539,7 @@
 	patches.kernel.org/6.6.16-288-bridge-mcast-fix-disabled-snooping-after-long-.patch
 	patches.kernel.org/6.6.16-289-devlink-Fix-referring-to-hw_addr-attribute-dur.patch
 	patches.kernel.org/6.6.16-290-selftests-net-add-missing-config-for-GENEVE.patch
+	patches.kernel.org/6.6.16-291-netfilter-conntrack-correct-window-scaling-wit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
