--- a/series.conf
+++ b/series.conf
@@ -3492,6 +3492,7 @@
 	patches.kernel.org/6.6.16-241-usb-xhci-plat-fix-usb-disconnect-issue-after-s.patch
 	patches.kernel.org/6.6.16-242-misc-lis3lv02d_i2c-Add-missing-setting-of-the-.patch
 	patches.kernel.org/6.6.16-243-libsubcmd-Fix-memory-leak-in-uniq.patch
+	patches.kernel.org/6.6.16-244-drm-amdkfd-Fix-lock-dependency-warning.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
