ARM: dts: imx23/28: Fix the DMA controller node name (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3373,6 +3373,7 @@
 	patches.kernel.org/6.6.16-122-ARM-dts-imx25-27-Pass-timing0.patch
 	patches.kernel.org/6.6.16-123-ARM-dts-imx27-apf27dev-Fix-LED-name.patch
 	patches.kernel.org/6.6.16-124-ARM-dts-imx23-sansa-Use-preferred-i2c-gpios-pr.patch
+	patches.kernel.org/6.6.16-125-ARM-dts-imx23-28-Fix-the-DMA-controller-node-n.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
