powerpc: Fix build error due to is_valid_bugaddr() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3254,6 +3254,7 @@
 	patches.kernel.org/6.6.16-003-powerpc-mm-Fix-null-pointer-dereference-in-pgt.patch
 	patches.kernel.org/6.6.16-004-arm64-irq-set-the-correct-node-for-VMAP-stack.patch
 	patches.kernel.org/6.6.16-005-drivers-perf-pmuv3-don-t-expose-SW_INCR-event-.patch
+	patches.kernel.org/6.6.16-006-powerpc-Fix-build-error-due-to-is_valid_bugadd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
