--- a/series.conf
+++ b/series.conf
@@ -3267,6 +3267,7 @@
 	patches.kernel.org/6.6.16-016-audit-Send-netlink-ACK-before-setting-connecti.patch
 	patches.kernel.org/6.6.16-017-ACPI-video-Add-quirk-for-the-Colorful-X15-AT-2.patch
 	patches.kernel.org/6.6.16-018-PNP-ACPI-fix-fortify-warning.patch
+	patches.kernel.org/6.6.16-019-ACPI-extlog-fix-NULL-pointer-dereference-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
