--- a/series.conf
+++ b/series.conf
@@ -3408,6 +3408,7 @@
 	patches.kernel.org/6.6.16-157-ALSA-hda-Refer-to-correct-stream-index-at-loop.patch
 	patches.kernel.org/6.6.16-158-ASoC-doc-Fix-undefined-SND_SOC_DAPM_NOPM-argum.patch
 	patches.kernel.org/6.6.16-159-fast_dput-handle-underflows-gracefully.patch
+	patches.kernel.org/6.6.16-160-reiserfs-Avoid-touching-renamed-directory-if-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
