ixgbe: Refactor returning internal error codes (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3529,6 +3529,7 @@
 	patches.kernel.org/6.6.16-278-net-lan966x-Fix-port-configuration-when-using-.patch
 	patches.kernel.org/6.6.16-279-tcp-add-sanity-checks-to-rx-zerocopy.patch
 	patches.kernel.org/6.6.16-280-e1000e-correct-maximum-frequency-adjustment-va.patch
+	patches.kernel.org/6.6.16-281-ixgbe-Refactor-returning-internal-error-codes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
