--- a/series.conf
+++ b/series.conf
@@ -3376,6 +3376,7 @@
 	patches.kernel.org/6.6.16-125-ARM-dts-imx23-28-Fix-the-DMA-controller-node-n.patch
 	patches.kernel.org/6.6.16-126-scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-str.patch
 	patches.kernel.org/6.6.16-127-scsi-lpfc-Move-determination-of-vmid_flag-afte.patch
+	patches.kernel.org/6.6.16-128-scsi-hisi_sas-Set-.phy_attached-before-notifin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
