--- a/series.conf
+++ b/series.conf
@@ -3519,6 +3519,7 @@
 	patches.kernel.org/6.6.16-268-selftests-net-explicitly-wait-for-listener-rea.patch
 	patches.kernel.org/6.6.16-269-gve-Fix-skb-truesize-underestimation.patch
 	patches.kernel.org/6.6.16-270-net-ethernet-mtk_eth_soc-set-DMA-coherent-mask.patch
+	patches.kernel.org/6.6.16-271-net-phy-mediatek-ge-soc-sync-driver-with-Media.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
