extcon: fix possible name leak in extcon_dev_register() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3479,6 +3479,7 @@
 	patches.kernel.org/6.6.16-228-PCI-Only-override-AMD-USB-controller-if-requir.patch
 	patches.kernel.org/6.6.16-229-PCI-switchtec-Fix-stdev_release-crash-after-su.patch
 	patches.kernel.org/6.6.16-230-perf-cs-etm-Bump-minimum-OpenCSD-version-to-en.patch
+	patches.kernel.org/6.6.16-231-extcon-fix-possible-name-leak-in-extcon_dev_re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
