drm/amdgpu: Fix missing error code in 'gmc_v6/7/8/9_0_hw_init()' (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3572,6 +3572,7 @@
 	patches.kernel.org/6.6.16-321-ASoC-codecs-wcd938x-fix-headphones-volume-cont.patch
 	patches.kernel.org/6.6.16-322-ASoC-codecs-lpass-wsa-macro-fix-compander-volu.patch
 	patches.kernel.org/6.6.16-323-ASoC-codecs-wsa883x-fix-PA-volume-control.patch
+	patches.kernel.org/6.6.16-324-drm-amdgpu-Fix-missing-error-code-in-gmc_v6-7-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
