--- a/series.conf
+++ b/series.conf
@@ -3444,6 +3444,7 @@
 	patches.kernel.org/6.6.16-193-drm-amd-display-Force-p-state-disallow-if-leav.patch
 	patches.kernel.org/6.6.16-194-drm-amdkfd-fix-mes-set-shader-debugger-process.patch
 	patches.kernel.org/6.6.16-195-drm-msm-dpu-enable-writeback-on-SM8350.patch
+	patches.kernel.org/6.6.16-196-drm-msm-dpu-enable-writeback-on-SM8450.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
