selftests: bonding: Check initial state (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3558,6 +3558,7 @@
 	patches.kernel.org/6.6.16-307-octeontx2-pf-Remove-xdp-queues-on-program-deta.patch
 	patches.kernel.org/6.6.16-308-net-sysfs-Fix-sys-class-net-iface-path.patch
 	patches.kernel.org/6.6.16-309-selftests-team-Add-missing-config-options.patch
+	patches.kernel.org/6.6.16-310-selftests-bonding-Check-initial-state.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
