--- a/series.conf
+++ b/series.conf
@@ -3361,6 +3361,7 @@
 	patches.kernel.org/6.6.16-110-ARM-dts-imx25-27-eukrea-Fix-RTC-node-name.patch
 	patches.kernel.org/6.6.16-111-ARM-dts-imx-Use-flash-0-0-pattern.patch
 	patches.kernel.org/6.6.16-112-ARM-dts-imx27-Fix-sram-node.patch
+	patches.kernel.org/6.6.16-113-ARM-dts-imx1-Fix-sram-node.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
