smb: client: fix hardlinking of reparse points (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3300,6 +3300,7 @@
 	patches.kernel.org/6.6.16-049-SUNRPC-Fix-a-suspicious-RCU-usage-warning.patch
 	patches.kernel.org/6.6.16-050-ext4-treat-end-of-range-as-exclusive-in-ext4_z.patch
 	patches.kernel.org/6.6.16-051-smb-client-fix-renaming-of-reparse-points.patch
+	patches.kernel.org/6.6.16-052-smb-client-fix-hardlinking-of-reparse-points.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
