--- a/series.conf
+++ b/series.conf
@@ -3480,6 +3480,7 @@
 	patches.kernel.org/6.6.16-229-PCI-switchtec-Fix-stdev_release-crash-after-su.patch
 	patches.kernel.org/6.6.16-230-perf-cs-etm-Bump-minimum-OpenCSD-version-to-en.patch
 	patches.kernel.org/6.6.16-231-extcon-fix-possible-name-leak-in-extcon_dev_re.patch
+	patches.kernel.org/6.6.16-232-usb-hub-Replace-hardcoded-quirk-value-with-BIT.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
