i3c: master: cdns: Update maximum prescaler value for i2c clock (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3471,6 +3471,7 @@
 	patches.kernel.org/6.6.16-220-um-Don-t-use-vfprintf-for-os_info.patch
 	patches.kernel.org/6.6.16-221-um-net-Fix-return-type-of-uml_net_start_xmit.patch
 	patches.kernel.org/6.6.16-222-um-time-travel-fix-time-corruption.patch
+	patches.kernel.org/6.6.16-223-i3c-master-cdns-Update-maximum-prescaler-value.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
