--- a/series.conf
+++ b/series.conf
@@ -3406,6 +3406,7 @@
 	patches.kernel.org/6.6.16-155-net-dsa-qca8k-put-MDIO-bus-OF-node-on-qca8k_md.patch
 	patches.kernel.org/6.6.16-156-f2fs-fix-to-check-return-value-of-f2fs_reserve.patch
 	patches.kernel.org/6.6.16-157-ALSA-hda-Refer-to-correct-stream-index-at-loop.patch
+	patches.kernel.org/6.6.16-158-ASoC-doc-Fix-undefined-SND_SOC_DAPM_NOPM-argum.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
