--- a/series.conf
+++ b/series.conf
@@ -3354,6 +3354,7 @@
 	patches.kernel.org/6.6.16-103-arm64-dts-qcom-sm8350-Fix-remoteproc-interrupt.patch
 	patches.kernel.org/6.6.16-104-wifi-mt76-connac-fix-EHT-phy-mode-check.patch
 	patches.kernel.org/6.6.16-105-wifi-mt76-mt7996-add-PCI-IDs-for-mt7992.patch
+	patches.kernel.org/6.6.16-106-bpf-Set-uattr-batch.count-as-zero-before-batch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
