perf cs-etm: Bump minimum OpenCSD version to ensure a bugfix is present (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3478,6 +3478,7 @@
 	patches.kernel.org/6.6.16-227-mailbox-arm_mhuv2-Fix-a-bug-for-mhuv2_sender_i.patch
 	patches.kernel.org/6.6.16-228-PCI-Only-override-AMD-USB-controller-if-requir.patch
 	patches.kernel.org/6.6.16-229-PCI-switchtec-Fix-stdev_release-crash-after-su.patch
+	patches.kernel.org/6.6.16-230-perf-cs-etm-Bump-minimum-OpenCSD-version-to-en.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
