arm64: dts: amlogic: fix format for s4 uart node (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3386,6 +3386,7 @@
 	patches.kernel.org/6.6.16-135-arm64-dts-qcom-msm8998-Fix-out-ports-is-a-requ.patch
 	patches.kernel.org/6.6.16-136-arm64-dts-qcom-Fix-coresight-warnings-in-in-po.patch
 	patches.kernel.org/6.6.16-137-ice-fix-pre-shifted-bit-usage.patch
+	patches.kernel.org/6.6.16-138-arm64-dts-amlogic-fix-format-for-s4-uart-node.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
