--- a/series.conf
+++ b/series.conf
@@ -3523,6 +3523,7 @@
 	patches.kernel.org/6.6.16-272-selftests-net-add-missing-config-for-big-tcp-t.patch
 	patches.kernel.org/6.6.16-273-selftests-net-add-missing-required-classifier.patch
 	patches.kernel.org/6.6.16-274-selftests-net-give-more-time-for-GRO-aggregati.patch
+	patches.kernel.org/6.6.16-275-ip6_tunnel-make-sure-to-pull-inner-header-in-_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
