block/rnbd-srv: Check for unlikely string overflow (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3365,6 +3365,7 @@
 	patches.kernel.org/6.6.16-114-net-phy-at803x-fix-passing-the-wrong-reference.patch
 	patches.kernel.org/6.6.16-115-ionic-pass-opcode-to-devcmd_wait.patch
 	patches.kernel.org/6.6.16-116-ionic-bypass-firmware-cmds-when-stuck-in-reset.patch
+	patches.kernel.org/6.6.16-117-block-rnbd-srv-Check-for-unlikely-string-overf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
