--- a/series.conf
+++ b/series.conf
@@ -3351,6 +3351,7 @@
 	patches.kernel.org/6.6.16-100-net-mvmdio-Avoid-excessive-sleeps-in-polled-mo.patch
 	patches.kernel.org/6.6.16-101-arm64-dts-qcom-sm8550-fix-soundwire-controller.patch
 	patches.kernel.org/6.6.16-102-arm64-dts-qcom-sm8450-fix-soundwire-controller.patch
+	patches.kernel.org/6.6.16-103-arm64-dts-qcom-sm8350-Fix-remoteproc-interrupt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
