ice: fix pre-shifted bit usage (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3385,6 +3385,7 @@
 	patches.kernel.org/6.6.16-134-arm64-dts-qcom-msm8996-Fix-in-ports-is-a-requi.patch
 	patches.kernel.org/6.6.16-135-arm64-dts-qcom-msm8998-Fix-out-ports-is-a-requ.patch
 	patches.kernel.org/6.6.16-136-arm64-dts-qcom-Fix-coresight-warnings-in-in-po.patch
+	patches.kernel.org/6.6.16-137-ice-fix-pre-shifted-bit-usage.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
