--- a/series.conf
+++ b/series.conf
@@ -3270,6 +3270,7 @@
 	patches.kernel.org/6.6.16-019-ACPI-extlog-fix-NULL-pointer-dereference-check.patch
 	patches.kernel.org/6.6.16-020-selftests-nolibc-fix-testcase-status-alignment.patch
 	patches.kernel.org/6.6.16-021-ACPI-NUMA-Fix-the-logic-of-getting-the-fake_px.patch
+	patches.kernel.org/6.6.16-022-kunit-tool-fix-parsing-of-test-attributes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
