--- a/series.conf
+++ b/series.conf
@@ -3442,6 +3442,7 @@
 	patches.kernel.org/6.6.16-191-media-i2c-imx335-Fix-hblank-min-max-values.patch
 	patches.kernel.org/6.6.16-192-drm-amd-display-For-prefetch-mode-0-extend-pre.patch
 	patches.kernel.org/6.6.16-193-drm-amd-display-Force-p-state-disallow-if-leav.patch
+	patches.kernel.org/6.6.16-194-drm-amdkfd-fix-mes-set-shader-debugger-process.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
