drm/msm/dpu: enable writeback on SM8350 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3443,6 +3443,7 @@
 	patches.kernel.org/6.6.16-192-drm-amd-display-For-prefetch-mode-0-extend-pre.patch
 	patches.kernel.org/6.6.16-193-drm-amd-display-Force-p-state-disallow-if-leav.patch
 	patches.kernel.org/6.6.16-194-drm-amdkfd-fix-mes-set-shader-debugger-process.patch
+	patches.kernel.org/6.6.16-195-drm-msm-dpu-enable-writeback-on-SM8350.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
