media: stk1160: Fixed high volume of stk1160_dbg messages (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3419,6 +3419,7 @@
 	patches.kernel.org/6.6.16-168-drm-drm_file-fix-use-of-uninitialized-variable.patch
 	patches.kernel.org/6.6.16-169-drm-framebuffer-Fix-use-of-uninitialized-varia.patch
 	patches.kernel.org/6.6.16-170-drm-mipi-dsi-Fix-detach-call-without-attach.patch
+	patches.kernel.org/6.6.16-171-media-stk1160-Fixed-high-volume-of-stk1160_dbg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
