--- a/series.conf
+++ b/series.conf
@@ -3296,6 +3296,7 @@
 	patches.kernel.org/6.6.16-045-s390-vfio-ap-fix-sysfs-status-attribute-for-AP.patch
 	patches.kernel.org/6.6.16-046-s390-ptrace-handle-setting-of-fpc-register-cor.patch
 	patches.kernel.org/6.6.16-047-KVM-s390-fix-setting-of-fpc-register.patch
+	patches.kernel.org/6.6.16-048-sysctl-Fix-out-of-bounds-access-for-empty-sysc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
