Documentation/sphinx: fix Python string escapes (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3249,6 +3249,7 @@
 	patches.kernel.org/6.6.15-330-serial-core-fix-kernel-doc-for-uart_port_unloc.patch
 	patches.kernel.org/6.6.15-331-thermal-trip-Drop-lockdep-assertion-from-therm.patch
 	patches.kernel.org/6.6.15-332-Linux-6.6.15.patch
+	patches.kernel.org/6.6.16-001-Documentation-sphinx-fix-Python-string-escapes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
