selftests: net: add missing required classifier (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3521,6 +3521,7 @@
 	patches.kernel.org/6.6.16-270-net-ethernet-mtk_eth_soc-set-DMA-coherent-mask.patch
 	patches.kernel.org/6.6.16-271-net-phy-mediatek-ge-soc-sync-driver-with-Media.patch
 	patches.kernel.org/6.6.16-272-selftests-net-add-missing-config-for-big-tcp-t.patch
+	patches.kernel.org/6.6.16-273-selftests-net-add-missing-required-classifier.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
