--- a/series.conf
+++ b/series.conf
@@ -3251,6 +3251,7 @@
 	patches.kernel.org/6.6.15-332-Linux-6.6.15.patch
 	patches.kernel.org/6.6.16-001-Documentation-sphinx-fix-Python-string-escapes.patch
 	patches.kernel.org/6.6.16-002-asm-generic-make-sparse-happy-with-odd-sized-p.patch
+	patches.kernel.org/6.6.16-003-powerpc-mm-Fix-null-pointer-dereference-in-pgt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
