ceph: fix deadlock or deadcode of misusing dget() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3497,6 +3497,7 @@
 	patches.kernel.org/6.6.16-246-virtio_net-Fix-d-directive-writing-between-1-a.patch
 	patches.kernel.org/6.6.16-247-blk-mq-fix-IO-hang-from-sbitmap-wakeup-race.patch
 	patches.kernel.org/6.6.16-248-ceph-reinitialize-mds-feature-bit-even-when-se.patch
+	patches.kernel.org/6.6.16-249-ceph-fix-deadlock-or-deadcode-of-misusing-dget.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
