--- a/series.conf
+++ b/series.conf
@@ -3449,6 +3449,7 @@
 	patches.kernel.org/6.6.16-198-drm-msm-dpu-fix-writeback-programming-for-YUV-.patch
 	patches.kernel.org/6.6.16-199-drm-amdgpu-fix-ftrace-event-amdgpu_bo_move-alw.patch
 	patches.kernel.org/6.6.16-200-clk-hi3620-Fix-memory-leak-in-hi3620_mmc_clk_i.patch
+	patches.kernel.org/6.6.16-201-clk-mmp-pxa168-Fix-memory-leak-in-pxa168_clk_i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
