RDMA/IPoIB: Fix error code return in ipoib_mcast_join (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3409,6 +3409,7 @@
 	patches.kernel.org/6.6.16-158-ASoC-doc-Fix-undefined-SND_SOC_DAPM_NOPM-argum.patch
 	patches.kernel.org/6.6.16-159-fast_dput-handle-underflows-gracefully.patch
 	patches.kernel.org/6.6.16-160-reiserfs-Avoid-touching-renamed-directory-if-p.patch
+	patches.kernel.org/6.6.16-161-RDMA-IPoIB-Fix-error-code-return-in-ipoib_mcas.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
