--- a/series.conf
+++ b/series.conf
@@ -3503,6 +3503,7 @@
 	patches.kernel.org/6.6.16-252-drm-amd-powerplay-Fix-kzalloc-parameter-ATOM_T.patch
 	patches.kernel.org/6.6.16-253-drm-amdgpu-Fix-with-right-return-code-EIO-in-a.patch
 	patches.kernel.org/6.6.16-254-drm-amdgpu-Release-adev-pm.fw-before-return-in.patch
+	patches.kernel.org/6.6.16-255-drm-amdkfd-Fix-node-NULL-check-in-svm_range_ge.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
