--- a/series.conf
+++ b/series.conf
@@ -3416,6 +3416,7 @@
 	patches.kernel.org/6.6.16-165-f2fs-fix-write-pointers-on-zoned-device-after-.patch
 	patches.kernel.org/6.6.16-166-ASoC-amd-Add-new-dmi-entries-for-acp5x-platfor.patch
 	patches.kernel.org/6.6.16-167-drm-amd-display-Fix-MST-PBN-X.Y-value-calculat.patch
+	patches.kernel.org/6.6.16-168-drm-drm_file-fix-use-of-uninitialized-variable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
