--- a/series.conf
+++ b/series.conf
@@ -3311,6 +3311,7 @@
 	patches.kernel.org/6.6.16-060-selftests-bpf-fix-RELEASE-1-build-for-tc_opts.patch
 	patches.kernel.org/6.6.16-061-selftests-bpf-satisfy-compiler-by-having-expli.patch
 	patches.kernel.org/6.6.16-062-libbpf-Fix-potential-uninitialized-tail-paddin.patch
+	patches.kernel.org/6.6.16-063-selftests-bpf-Fix-pyperf180-compilation-failur.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
