--- a/series.conf
+++ b/series.conf
@@ -3358,6 +3358,7 @@
 	patches.kernel.org/6.6.16-107-wifi-wfx-fix-possible-NULL-pointer-dereference.patch
 	patches.kernel.org/6.6.16-108-wifi-ath12k-fix-the-issue-that-the-multicast-b.patch
 	patches.kernel.org/6.6.16-109-ARM-dts-rockchip-fix-rk3036-hdmi-ports-node.patch
+	patches.kernel.org/6.6.16-110-ARM-dts-imx25-27-eukrea-Fix-RTC-node-name.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
