x86/mce: Mark fatal MCE's page as poison to avoid panic in the kdump kernel (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3260,6 +3260,7 @@
 	patches.kernel.org/6.6.16-009-x86-boot-Ignore-NMIs-during-very-early-boot.patch
 	patches.kernel.org/6.6.16-010-powerpc-pmd_move_must_withdraw-is-only-needed-.patch
 	patches.kernel.org/6.6.16-011-powerpc-lib-Validate-size-for-vector-operation.patch
+	patches.kernel.org/6.6.16-012-x86-mce-Mark-fatal-MCE-s-page-as-poison-to-avo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
