--- a/series.conf
+++ b/series.conf
@@ -3481,6 +3481,7 @@
 	patches.kernel.org/6.6.16-230-perf-cs-etm-Bump-minimum-OpenCSD-version-to-en.patch
 	patches.kernel.org/6.6.16-231-extcon-fix-possible-name-leak-in-extcon_dev_re.patch
 	patches.kernel.org/6.6.16-232-usb-hub-Replace-hardcoded-quirk-value-with-BIT.patch
+	patches.kernel.org/6.6.16-233-usb-hub-Add-quirk-to-decrease-IN-ep-poll-inter.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
