--- a/series.conf
+++ b/series.conf
@@ -3487,6 +3487,7 @@
 	patches.kernel.org/6.6.16-236-fs-kernfs-dir-obey-S_ISGID.patch
 	patches.kernel.org/6.6.16-237-spmi-mediatek-Fix-UAF-on-device-remove.patch
 	patches.kernel.org/6.6.16-238-PCI-Fix-64GT-s-effective-data-rate-calculation.patch
+	patches.kernel.org/6.6.16-239-PCI-AER-Decode-Requester-ID-when-no-error-info.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
