--- a/series.conf
+++ b/series.conf
@@ -3473,6 +3473,7 @@
 	patches.kernel.org/6.6.16-222-um-time-travel-fix-time-corruption.patch
 	patches.kernel.org/6.6.16-223-i3c-master-cdns-Update-maximum-prescaler-value.patch
 	patches.kernel.org/6.6.16-224-riscv-Make-XIP-bootable-again.patch
+	patches.kernel.org/6.6.16-225-xen-gntdev-Fix-the-abuse-of-underlying-struct-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
