ARM: dts: samsung: exynos4: fix camera unit addresses/ranges (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3320,6 +3320,7 @@
 	patches.kernel.org/6.6.16-069-soc-xilinx-Fix-for-call-trace-due-to-the-usage.patch
 	patches.kernel.org/6.6.16-070-soc-xilinx-fix-unhandled-SGI-warning-message.patch
 	patches.kernel.org/6.6.16-071-scsi-lpfc-Fix-possible-file-string-name-overfl.patch
+	patches.kernel.org/6.6.16-072-ARM-dts-samsung-exynos4-fix-camera-unit-addres.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
