audit: Send netlink ACK before setting connection in auditd_set (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3264,6 +3264,7 @@
 	patches.kernel.org/6.6.16-013-perf-core-Fix-narrow-startup-race-when-creatin.patch
 	patches.kernel.org/6.6.16-014-debugobjects-Stop-accessing-objects-after-rele.patch
 	patches.kernel.org/6.6.16-015-regulator-core-Only-increment-use_count-when-e.patch
+	patches.kernel.org/6.6.16-016-audit-Send-netlink-ACK-before-setting-connecti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
