--- a/series.conf
+++ b/series.conf
@@ -3380,6 +3380,7 @@
 	patches.kernel.org/6.6.16-129-ice-fix-ICE_AQ_VSI_Q_OPT_RSS_-register-values.patch
 	patches.kernel.org/6.6.16-130-net-atlantic-eliminate-double-free-in-error-ha.patch
 	patches.kernel.org/6.6.16-131-net-dsa-mv88e6xxx-Fix-mv88e6352_serdes_get_sta.patch
+	patches.kernel.org/6.6.16-132-block-prevent-an-integer-overflow-in-bvec_try_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
