--- a/series.conf
+++ b/series.conf
@@ -3556,6 +3556,7 @@
 	patches.kernel.org/6.6.16-305-selftests-net-fix-available-tunnels-detection.patch
 	patches.kernel.org/6.6.16-306-selftests-net-don-t-access-dev-stdout-in-pmtu..patch
 	patches.kernel.org/6.6.16-307-octeontx2-pf-Remove-xdp-queues-on-program-deta.patch
+	patches.kernel.org/6.6.16-308-net-sysfs-Fix-sys-class-net-iface-path.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
