ARM: dts: rockchip: fix rk3036 hdmi ports node (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3357,6 +3357,7 @@
 	patches.kernel.org/6.6.16-106-bpf-Set-uattr-batch.count-as-zero-before-batch.patch
 	patches.kernel.org/6.6.16-107-wifi-wfx-fix-possible-NULL-pointer-dereference.patch
 	patches.kernel.org/6.6.16-108-wifi-ath12k-fix-the-issue-that-the-multicast-b.patch
+	patches.kernel.org/6.6.16-109-ARM-dts-rockchip-fix-rk3036-hdmi-ports-node.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
