--- a/series.conf
+++ b/series.conf
@@ -3472,6 +3472,7 @@
 	patches.kernel.org/6.6.16-221-um-net-Fix-return-type-of-uml_net_start_xmit.patch
 	patches.kernel.org/6.6.16-222-um-time-travel-fix-time-corruption.patch
 	patches.kernel.org/6.6.16-223-i3c-master-cdns-Update-maximum-prescaler-value.patch
+	patches.kernel.org/6.6.16-224-riscv-Make-XIP-bootable-again.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
