--- a/series.conf
+++ b/series.conf
@@ -3547,6 +3547,7 @@
 	patches.kernel.org/6.6.16-296-af_unix-fix-lockdep-positive-in-sk_diag_dump_i.patch
 	patches.kernel.org/6.6.16-297-pds_core-Cancel-AQ-work-on-teardown.patch
 	patches.kernel.org/6.6.16-298-pds_core-Use-struct-pdsc-for-the-pdsc_adminq_i.patch
+	patches.kernel.org/6.6.16-299-pds_core-implement-pci-reset-handlers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
