--- a/series.conf
+++ b/series.conf
@@ -3506,6 +3506,7 @@
 	patches.kernel.org/6.6.16-255-drm-amdkfd-Fix-node-NULL-check-in-svm_range_ge.patch
 	patches.kernel.org/6.6.16-256-i2c-rk3x-Adjust-mask-value-offset-for-i2c2-on-.patch
 	patches.kernel.org/6.6.16-257-perf-Fix-the-nr_addr_filters-fix.patch
+	patches.kernel.org/6.6.16-258-wifi-cfg80211-fix-RCU-dereference-in-__cfg8021.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
