debugobjects: Stop accessing objects after releasing hash bucket lock (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3262,6 +3262,7 @@
 	patches.kernel.org/6.6.16-011-powerpc-lib-Validate-size-for-vector-operation.patch
 	patches.kernel.org/6.6.16-012-x86-mce-Mark-fatal-MCE-s-page-as-poison-to-avo.patch
 	patches.kernel.org/6.6.16-013-perf-core-Fix-narrow-startup-race-when-creatin.patch
+	patches.kernel.org/6.6.16-014-debugobjects-Stop-accessing-objects-after-rele.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
