watchdog: starfive: add lock annotations to fix context imbalances (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3450,6 +3450,7 @@
 	patches.kernel.org/6.6.16-199-drm-amdgpu-fix-ftrace-event-amdgpu_bo_move-alw.patch
 	patches.kernel.org/6.6.16-200-clk-hi3620-Fix-memory-leak-in-hi3620_mmc_clk_i.patch
 	patches.kernel.org/6.6.16-201-clk-mmp-pxa168-Fix-memory-leak-in-pxa168_clk_i.patch
+	patches.kernel.org/6.6.16-202-watchdog-starfive-add-lock-annotations-to-fix-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
