ASoC: codecs: wcd938x: fix headphones volume controls (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3569,6 +3569,7 @@
 	patches.kernel.org/6.6.16-318-selftests-bpf-Remove-flaky-test_btf_id-test.patch
 	patches.kernel.org/6.6.16-319-bonding-remove-print-in-bond_verify_device_pat.patch
 	patches.kernel.org/6.6.16-320-ASoC-qcom-sc8280xp-limit-speaker-volumes.patch
+	patches.kernel.org/6.6.16-321-ASoC-codecs-wcd938x-fix-headphones-volume-cont.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
