octeontx2-pf: Remove xdp queues on program detach (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3555,6 +3555,7 @@
 	patches.kernel.org/6.6.16-304-selftests-net-add-missing-config-for-pmtu.sh-t.patch
 	patches.kernel.org/6.6.16-305-selftests-net-fix-available-tunnels-detection.patch
 	patches.kernel.org/6.6.16-306-selftests-net-don-t-access-dev-stdout-in-pmtu..patch
+	patches.kernel.org/6.6.16-307-octeontx2-pf-Remove-xdp-queues-on-program-deta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
