--- a/series.conf
+++ b/series.conf
@@ -3563,6 +3563,7 @@
 	patches.kernel.org/6.6.16-312-selftests-net-enable-some-more-knobs.patch
 	patches.kernel.org/6.6.16-313-arm64-irq-set-the-correct-node-for-shadow-call.patch
 	patches.kernel.org/6.6.16-314-mm-kmsan-fix-infinite-recursion-due-to-RCU-cri.patch
+	patches.kernel.org/6.6.16-315-Revert-drm-amd-display-Disable-PSR-SU-on-Parad.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
