KVM: s390: fix setting of fpc register (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3295,6 +3295,7 @@
 	patches.kernel.org/6.6.16-044-arch-consolidate-arch_irq_work_raise-prototype.patch
 	patches.kernel.org/6.6.16-045-s390-vfio-ap-fix-sysfs-status-attribute-for-AP.patch
 	patches.kernel.org/6.6.16-046-s390-ptrace-handle-setting-of-fpc-register-cor.patch
+	patches.kernel.org/6.6.16-047-KVM-s390-fix-setting-of-fpc-register.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
