ARM: dts: qcom: strip prefix from PMIC files (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3314,6 +3314,7 @@
 	patches.kernel.org/6.6.16-063-selftests-bpf-Fix-pyperf180-compilation-failur.patch
 	patches.kernel.org/6.6.16-064-wifi-rt2x00-correct-wrong-BBP-register-in-RxDC.patch
 	patches.kernel.org/6.6.16-065-selftests-bpf-Fix-issues-in-setup_classid_envi.patch
+	patches.kernel.org/6.6.16-066-ARM-dts-qcom-strip-prefix-from-PMIC-files.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
