um: Don't use vfprintf() for os_info() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3468,6 +3468,7 @@
 	patches.kernel.org/6.6.16-217-pinctrl-baytrail-Fix-types-of-config-value-in-.patch
 	patches.kernel.org/6.6.16-218-leds-trigger-panic-Don-t-register-panic-notifi.patch
 	patches.kernel.org/6.6.16-219-um-Fix-naming-clash-between-UML-and-scheduler.patch
+	patches.kernel.org/6.6.16-220-um-Don-t-use-vfprintf-for-os_info.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
