--- a/series.conf
+++ b/series.conf
@@ -3369,6 +3369,7 @@
 	patches.kernel.org/6.6.16-118-arm64-zynqmp-Move-fixed-clock-to-for-kv260.patch
 	patches.kernel.org/6.6.16-119-arm64-zynqmp-Fix-clock-node-name-in-kv260-card.patch
 	patches.kernel.org/6.6.16-120-selftests-bpf-fix-compiler-warnings-in-RELEASE.patch
+	patches.kernel.org/6.6.16-121-ARM-dts-imx25-Fix-the-iim-compatible-string.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
