PCI: add INTEL_HDA_ARL to pci_ids.h (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3421,6 +3421,7 @@
 	patches.kernel.org/6.6.16-170-drm-mipi-dsi-Fix-detach-call-without-attach.patch
 	patches.kernel.org/6.6.16-171-media-stk1160-Fixed-high-volume-of-stk1160_dbg.patch
 	patches.kernel.org/6.6.16-172-media-rockchip-rga-fix-swizzling-for-RGB-forma.patch
+	patches.kernel.org/6.6.16-173-PCI-add-INTEL_HDA_ARL-to-pci_ids.h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
