PCI: Only override AMD USB controller if required (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3476,6 +3476,7 @@
 	patches.kernel.org/6.6.16-225-xen-gntdev-Fix-the-abuse-of-underlying-struct-.patch
 	patches.kernel.org/6.6.16-226-mfd-ti_am335x_tscadc-Fix-TI-SoC-dependencies.patch
 	patches.kernel.org/6.6.16-227-mailbox-arm_mhuv2-Fix-a-bug-for-mhuv2_sender_i.patch
+	patches.kernel.org/6.6.16-228-PCI-Only-override-AMD-USB-controller-if-requir.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
