PM / devfreq: Synchronize devfreq_monitor_[start/stop] (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3271,6 +3271,7 @@
 	patches.kernel.org/6.6.16-020-selftests-nolibc-fix-testcase-status-alignment.patch
 	patches.kernel.org/6.6.16-021-ACPI-NUMA-Fix-the-logic-of-getting-the-fake_px.patch
 	patches.kernel.org/6.6.16-022-kunit-tool-fix-parsing-of-test-attributes.patch
+	patches.kernel.org/6.6.16-023-PM-devfreq-Synchronize-devfreq_monitor_-start-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
