regulator: ti-abb: don't use devm_platform_ioremap_resource_byname for shared interrupt register (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3512,6 +3512,7 @@
 	patches.kernel.org/6.6.16-261-riscv-Fix-build-error-on-rv32-XIP.patch
 	patches.kernel.org/6.6.16-262-scsi-isci-Fix-an-error-code-problem-in-isci_io.patch
 	patches.kernel.org/6.6.16-263-kunit-run-test-suites-only-after-module-initia.patch
+	patches.kernel.org/6.6.16-264-regulator-ti-abb-don-t-use-devm_platform_iorem.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
