selftests/bpf: Remove flaky test_btf_id test (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3566,6 +3566,7 @@
 	patches.kernel.org/6.6.16-315-Revert-drm-amd-display-Disable-PSR-SU-on-Parad.patch
 	patches.kernel.org/6.6.16-316-drm-msm-dsi-Enable-runtime-PM.patch
 	patches.kernel.org/6.6.16-317-LoongArch-smp-Call-rcutree_report_cpu_starting.patch
+	patches.kernel.org/6.6.16-318-selftests-bpf-Remove-flaky-test_btf_id-test.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
