--- a/series.conf
+++ b/series.conf
@@ -3413,6 +3413,7 @@
 	patches.kernel.org/6.6.16-162-drm-panel-edp-Add-override_edid_mode-quirk-for.patch
 	patches.kernel.org/6.6.16-163-drm-bridge-anx7625-Fix-Set-HPD-irq-detect-wind.patch
 	patches.kernel.org/6.6.16-164-drm-amd-display-Fix-tiled-display-misalignment.patch
+	patches.kernel.org/6.6.16-165-f2fs-fix-write-pointers-on-zoned-device-after-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
