--- a/series.conf
+++ b/series.conf
@@ -3278,6 +3278,7 @@
 	patches.kernel.org/6.6.16-027-UBSAN-array-index-out-of-bounds-in-dtSplitRoot.patch
 	patches.kernel.org/6.6.16-028-jfs-fix-slab-out-of-bounds-Read-in-dtSearch.patch
 	patches.kernel.org/6.6.16-029-jfs-fix-array-index-out-of-bounds-in-dbAdjTree.patch
+	patches.kernel.org/6.6.16-030-jfs-fix-uaf-in-jfs_evict_inode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
