octeontx2-af: Fix max NPC MCAM entry check while validating ref_entry (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3401,6 +3401,7 @@
 	patches.kernel.org/6.6.16-150-arm64-dts-sprd-Add-clock-reference-for-pll2-on.patch
 	patches.kernel.org/6.6.16-151-arm64-dts-sprd-Change-UMS512-idle-state-nodena.patch
 	patches.kernel.org/6.6.16-152-i40e-Fix-VF-disable-behavior-to-block-all-traf.patch
+	patches.kernel.org/6.6.16-153-octeontx2-af-Fix-max-NPC-MCAM-entry-check-whil.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
