riscv: Fix build error on rv32 + XIP (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3509,6 +3509,7 @@
 	patches.kernel.org/6.6.16-258-wifi-cfg80211-fix-RCU-dereference-in-__cfg8021.patch
 	patches.kernel.org/6.6.16-259-drm-using-mul_u32_u32-requires-linux-math64.h.patch
 	patches.kernel.org/6.6.16-260-drm-amdkfd-only-flush-mes-process-context-if-m.patch
+	patches.kernel.org/6.6.16-261-riscv-Fix-build-error-on-rv32-XIP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
