fs/kernfs/dir: obey S_ISGID (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3484,6 +3484,7 @@
 	patches.kernel.org/6.6.16-233-usb-hub-Add-quirk-to-decrease-IN-ep-poll-inter.patch
 	patches.kernel.org/6.6.16-234-selftests-sgx-Fix-linker-script-asserts.patch
 	patches.kernel.org/6.6.16-235-tty-allow-TIOCSLCKTRMIOS-with-CAP_CHECKPOINT_R.patch
+	patches.kernel.org/6.6.16-236-fs-kernfs-dir-obey-S_ISGID.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
