accel/habanalabs: add support for Gaudi2C device (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3452,6 +3452,7 @@
 	patches.kernel.org/6.6.16-201-clk-mmp-pxa168-Fix-memory-leak-in-pxa168_clk_i.patch
 	patches.kernel.org/6.6.16-202-watchdog-starfive-add-lock-annotations-to-fix-.patch
 	patches.kernel.org/6.6.16-203-watchdog-it87_wdt-Keep-WDTCTRL-bit-3-unmodifie.patch
+	patches.kernel.org/6.6.16-204-accel-habanalabs-add-support-for-Gaudi2C-devic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
