ARM: dts: imx23-sansa: Use preferred i2c-gpios properties (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3372,6 +3372,7 @@
 	patches.kernel.org/6.6.16-121-ARM-dts-imx25-Fix-the-iim-compatible-string.patch
 	patches.kernel.org/6.6.16-122-ARM-dts-imx25-27-Pass-timing0.patch
 	patches.kernel.org/6.6.16-123-ARM-dts-imx27-apf27dev-Fix-LED-name.patch
+	patches.kernel.org/6.6.16-124-ARM-dts-imx23-sansa-Use-preferred-i2c-gpios-pr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
