--- a/series.conf
+++ b/series.conf
@@ -3489,6 +3489,7 @@
 	patches.kernel.org/6.6.16-238-PCI-Fix-64GT-s-effective-data-rate-calculation.patch
 	patches.kernel.org/6.6.16-239-PCI-AER-Decode-Requester-ID-when-no-error-info.patch
 	patches.kernel.org/6.6.16-240-9p-Fix-initialisation-of-netfs_inode-for-9p.patch
+	patches.kernel.org/6.6.16-241-usb-xhci-plat-fix-usb-disconnect-issue-after-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
