ALSA: hda: Refer to correct stream index at loops (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3405,6 +3405,7 @@
 	patches.kernel.org/6.6.16-154-net-kcm-fix-direct-access-to-bv_len.patch
 	patches.kernel.org/6.6.16-155-net-dsa-qca8k-put-MDIO-bus-OF-node-on-qca8k_md.patch
 	patches.kernel.org/6.6.16-156-f2fs-fix-to-check-return-value-of-f2fs_reserve.patch
+	patches.kernel.org/6.6.16-157-ALSA-hda-Refer-to-correct-stream-index-at-loop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
