--- a/series.conf
+++ b/series.conf
@@ -3541,6 +3541,7 @@
 	patches.kernel.org/6.6.16-290-selftests-net-add-missing-config-for-GENEVE.patch
 	patches.kernel.org/6.6.16-291-netfilter-conntrack-correct-window-scaling-wit.patch
 	patches.kernel.org/6.6.16-292-netfilter-nf_tables-restrict-tunnel-object-to-.patch
+	patches.kernel.org/6.6.16-293-netfilter-nf_log-replace-BUG_ON-by-WARN_ON_ONC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
