mfd: ti_am335x_tscadc: Fix TI SoC dependencies (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3474,6 +3474,7 @@
 	patches.kernel.org/6.6.16-223-i3c-master-cdns-Update-maximum-prescaler-value.patch
 	patches.kernel.org/6.6.16-224-riscv-Make-XIP-bootable-again.patch
 	patches.kernel.org/6.6.16-225-xen-gntdev-Fix-the-abuse-of-underlying-struct-.patch
+	patches.kernel.org/6.6.16-226-mfd-ti_am335x_tscadc-Fix-TI-SoC-dependencies.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
