--- a/series.conf
+++ b/series.conf
@@ -8209,6 +8209,7 @@
 	patches.suse/maple_tree-update-mas_preallocate-testing.patch
 	patches.suse/maple_tree-refine-mas_preallocate-node-calculations.patch
 	patches.suse/maple_tree-reduce-resets-during-store-setup.patch
+	patches.suse/mm-mmap-change-vma-iteration-order-in-do_vmi_align_munmap.patch
 	patches.suse/mm-hugepage-pud-allow-arch-specific-helper-function--348a.patch
 	patches.suse/mm-page_alloc-avoid-unneeded-alike_pages-calculation.patch
 	patches.suse/mm-vmscan-fix-inaccurate-reclaim-during-proactive-reclaim.patch
