--- a/series.conf
+++ b/series.conf
@@ -12223,6 +12223,7 @@
 	patches.suse/vhost-Allow-null-msg.size-on-VHOST_IOTLB_INVALIDATE.patch
 	patches.suse/virtio_pci-fix-the-common-cfg-map-size.patch
 	patches.suse/mm-page_alloc-correct-start-page-when-guard-page-debug-is-enabled.patch
+	patches.suse/mm-fix-vm_brk_flags-to-not-bail-out-while-holding-lock.patch
 	patches.suse/mm-migrate-fix-do_pages_move-for-compat-pointers.patch
 	patches.suse/mm-zswap-fix-pool-refcount-bug-around-shrink_worker.patch
 	patches.suse/maple_tree-add-GFP_KERNEL-to-allocations-in-mas_expe.patch
