--- a/series.conf
+++ b/series.conf
@@ -8232,6 +8232,7 @@
 	patches.suse/mm-compaction-correct-comment-to-complete-migration-failure.patch
 	patches.suse/mm-compaction-remove-unnecessary-return-for-void-function.patch
 	patches.suse/mm-for-CONFIG_PER_VMA_LOCK-equate-write-lock-assertion-for-vma-and-mmap.patch
+	patches.suse/mm-replace-mmap-with-vma-write-lock-assertions-when-operating-on-a-vma.patch
 	patches.suse/mm-mm_init-use-helper-macro-BITS_PER_LONG-and-BITS_PER_BYTE.patch
 	patches.suse/mm-page_alloc-remove-track-of-active-PCP-lists-range-in-bulk-free.patch
 	patches.suse/mm-page_alloc-remove-unnecessary-parameter-batch-of-nr_pcp_free.patch
