--- a/series.conf
+++ b/series.conf
@@ -8234,6 +8234,7 @@
 	patches.suse/mm-for-CONFIG_PER_VMA_LOCK-equate-write-lock-assertion-for-vma-and-mmap.patch
 	patches.suse/mm-replace-mmap-with-vma-write-lock-assertions-when-operating-on-a-vma.patch
 	patches.suse/mm-lock-vma-explicitly-before-doing-vm_flags_reset-and-vm_flags_reset_once.patch
+	patches.suse/mm-always-lock-new-vma-before-inserting-into-vma-tree.patch
 	patches.suse/mm-mm_init-use-helper-macro-BITS_PER_LONG-and-BITS_PER_BYTE.patch
 	patches.suse/mm-page_alloc-remove-track-of-active-PCP-lists-range-in-bulk-free.patch
 	patches.suse/mm-page_alloc-remove-unnecessary-parameter-batch-of-nr_pcp_free.patch
