maple_tree: do not preallocate nodes for slot stores (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -15261,6 +15261,7 @@
 	patches.suse/x86-alternatives-Sync-core-before-enabling-interrupts.patch
 	patches.suse/x86-alternatives-disable-interrupts-and-sync-when-optimizing-nops-in-place.patch
 	patches.suse/kexec-fix-KEXEC_FILE-dependencies.patch
+	patches.suse/maple_tree-do-not-preallocate-nodes-for-slot-stores.patch
 	patches.suse/selftests-secretmem-floor-the-memory-size-to-the-mul.patch
 	patches.suse/linux-export-Ensure-natural-alignment-of-kcrctab-arr.patch
 	patches.suse/badblocks-avoid-checking-invalid-range-in-badblocks_-146e.patch
