--- a/series.conf
+++ b/series.conf
@@ -15300,6 +15300,7 @@
 	patches.suse/drm-mediatek-Remove-the-redundant-driver-data-for-DP.patch
 	patches.suse/drm-mediatek-Fix-underrun-in-VDO1-when-switches-off-.patch
 	patches.suse/drm-mediatek-dp-Add-phy_mtk_dp-module-as-pre-depende.patch
+	patches.suse/accel-habanalabs-add-support-for-Gaudi2C-device.patch
 	patches.suse/accel-habanalabs-fix-information-leak-in-sec_attest_.patch
 	patches.suse/drm-Don-t-unref-the-same-fb-many-times-by-mistake-du.patch
 	patches.suse/drm-rockchip-vop2-Avoid-use-regmap_reinit_cache-at-r.patch
